@@ -70,6 +70,7 @@ type safe_chars = bool array
 module type Scheme = sig
   val safe_chars_for_component : component -> safe_chars
   val normalize_host : string option -> string option
+  val uses_authority : bool
 end
 
 module Generic : Scheme = struct
@@ -153,6 +154,8 @@ module Generic : Scheme = struct
     | _ -> safe_chars
 
   let normalize_host hso = hso
+
+  let uses_authority = true
 end
 
 module Http : Scheme = struct
@@ -173,10 +176,17 @@ module File : Scheme = struct
     | None -> Some ""
 end
 
+module Urn : Scheme = struct
+  include Generic
+
+  let uses_authority = false
+end
+
 let module_of_scheme = function
   | Some s -> begin match String.lowercase s with
       | "http" | "https" -> (module Http : Scheme)
       | "file" -> (module File : Scheme)
+      | "urn"  -> (module Urn : Scheme)
       | _ -> (module Generic : Scheme)
     end
   | None -> (module Generic : Scheme)
@@ -594,6 +604,7 @@ let to_string uri =
   let scheme = match uri.scheme with
     | Some s -> Some (Pct.uncast_decoded s)
     | None -> None in
+  let module Scheme = (val (module_of_scheme scheme) : Scheme) in
   let buf = Buffer.create 128 in
   (* Percent encode a decoded string and add it to the buffer *)
   let add_pct_string ?(component=`Path) x =
@@ -631,8 +642,16 @@ let to_string uri =
   | [] -> ()
   | "/"::_ ->
     Buffer.add_string buf (Pct.uncast_encoded (encoded_of_path ?scheme uri.path))
-  | _ ->
-    (if uri.host <> None then Buffer.add_char buf '/');
+  | first_segment::_ ->
+    (match uri.host with
+     | Some _ -> Buffer.add_char buf '/'
+     | None ->
+       (* ensure roundtrip by forcing relative path interpretation not scheme *)
+       if Scheme.uses_authority
+       then match Stringext.find_from first_segment ~pattern:":" with
+         | Some _ -> Buffer.add_string buf "./"
+         | None -> ()
+    );
     Buffer.add_string buf
       (Pct.uncast_encoded (encoded_of_path ?scheme uri.path))
   );
